src/objects/BP_Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Bypass_FLS_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass FLS Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Link__c</fullName>
        <label>Community Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Company_Logo_URL__c</fullName>
        <label>Company Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DP360_Lead_Search_Days__c</fullName>
        <description>This should contains number of days. Open Lead will be fetched only for last mentioned days only. If no value in this, all open leads will be fetched.</description>
        <inlineHelpText>This should contains number of days. Open Lead will be fetched only for last mentioned days only. If no value in this, all open leads will be fetched.</inlineHelpText>
        <label>DP360 Lead Search Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealership_Country__c</fullName>
        <description>Dealership&apos;s country name from business profile.</description>
        <label>Dealership Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Data_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Enable_Image_Public_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enable Image Public URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_QBO_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is QBO Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MapAPIKey__c</fullName>
        <label>MapAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Base_Url__c</fullName>
        <description>Use to store base url with namespace for the organisation.</description>
        <label>Org Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Password__c</fullName>
        <label>SF Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Username__c</fullName>
        <label>SF Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOM_Part_Inventory_File_Name__c</fullName>
        <label>SOM Part Inventory File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Help_Icon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Help Icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Email_Recipient__c</fullName>
        <inlineHelpText>Semi colon separated email ids</inlineHelpText>
        <label>Support Email Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
	<fields>
        <fullName>isLoadStaticResource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLoadStaticResource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Search_Report_Export_Query_Limit__c</fullName>
        <label>Home Search Report Export Query Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yamaha_Vendor_Code__c</fullName>
        <label>Yamaha Vendor Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intext_Alert_Email_Recipient__c</fullName>
        <label>Intext Alert Email Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>  
    <fields>
        <fullName>Sync_Retry_Scheduler_Interval__c</fullName>
        <defaultValue>20</defaultValue>
        <description>#12826 - Scheduler interval to re sync transactions in case of Access denied error in Xero.</description>
        <inlineHelpText>Scheduler Interval In Minutes</inlineHelpText>
        <label>Sync Retry Scheduler Interval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields> 
    <fields>
        <fullName>SOM_File_Posting_Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SOM File Posting Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields> 
    <fields>
        <fullName>JobRequestId__c</fullName>
        <description>Response Id from SOM job API</description>
        <inlineHelpText>Response Id from SOM job API</inlineHelpText>
        <label>JobRequestId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BP Configurations</label>
</CustomObject>